bpo-43172: readline now passes its tests when built against libedit.

Existing irreconcilable API differences remain in readline.get_begidx
and eadline.get_endidx behavior based on libreadline vs libedit use.